--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "winston-rsyslog",
-  "version": "1.0.1",
-  "description": "A. rSysLog transport for winston",
+  "version": "0.0.1",
+  "description": "An rSysLog transport for winston",
   "author": "Fabio Grande <grnfba@gmail.com>",
   "repository": {
     "type": "git",
